# Hello-World-Assignment

./: CMakeLists.txt  main.cpp  readme.md
document/html/: _2home_2blackcat_2_clion_projects_2_cpp_assignment_2model_2_product_8hpp-example.html  _account_8hpp.html  _account_8hpp__dep__incl.dot  _account_8hpp__dep__incl.md5  _account_8hpp__incl.dot  _account_8hpp__incl.md5  _account_8hpp_source.html  _account_manager_8hpp.html  _account_manager_8hpp__dep__incl.dot  _account_manager_8hpp__dep__incl.md5  _account_manager_8hpp__incl.dot  _account_manager_8hpp__incl.md5  _account_manager_8hpp_source.html  _hash_sum_8hpp.html  _hash_sum_8hpp__dep__incl.dot  _hash_sum_8hpp__dep__incl.md5  _hash_sum_8hpp__incl.dot  _hash_sum_8hpp__incl.md5  _hash_sum_8hpp_source.html  _menu_helper_8cpp.html  _menu_helper_8cpp__incl.dot  _menu_helper_8cpp__incl.md5  _menu_helper_8cpp_source.html  _menu_helper_8hpp.html  _menu_helper_8hpp__dep__incl.dot  _menu_helper_8hpp__dep__incl.md5  _menu_helper_8hpp__incl.dot  _menu_helper_8hpp__incl.md5  _menu_helper_8hpp_source.html  _model_base_8cpp.html  _model_base_8cpp__incl.dot  _model_base_8cpp__incl.md5  _model_base_8cpp_source.html  _model_base_8hpp.html  _model_base_8hpp__dep__incl.dot  _model_base_8hpp__dep__incl.md5  _model_base_8hpp__incl.dot  _model_base_8hpp__incl.md5  _model_base_8hpp_source.html  _product_8hpp.html  (+97 more)
document/html/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  (+48 more)
model/: Account.cpp  Account.hpp  AccountManager.cpp  AccountManager.hpp  ModelBase.cpp  ModelBase.hpp  Order.cpp  Order.hpp  OrderManager.cpp  OrderManager.hpp  Product.cpp  Product.hpp  ProductManager.cpp  ProductManager.hpp
screen/: AdminScreen.cpp  AdminScreen.hpp  GuestScreen.cpp  GuestScreen.hpp  LoginScreen.cpp  LoginScreen.hpp  ManagerScreen.cpp  ManagerScreen.hpp
template/: AccountListTemplate.hpp  ProductListTemplate.hpp
utils/: DateTimeFormat.cpp  DateTimeFormat.hpp  ExportHTML.cpp  ExportHTML.hpp  HashSum.hpp  MenuHelper.cpp  MenuHelper.hpp  Utils.cpp  Utils.hpp
